--- a/assets/json/components_data.json
+++ b/assets/json/components_data.json
@@ -149,7 +149,7 @@
       "dexterity": "0",
       "agility": "3",
       "health": "0",
-      "picture": "/assets/images/potions/petrifying_euphoria_brew.png"
+      "picture": "../images/potions/petrifying_euphoria_brew.png"
     },
     {
       "id": "11",
@@ -441,203 +441,23 @@
   "villains": [
     {
         "id": 0,
-        "name": "Little Pumpkin",
-        "Strength": 5,
-        "Agility": 3,
-        "Dexterity": 4,
-        "extraStr": 1,
-        "extraAgil": 1,
-        "extraDex": 2
+        "name": "Tiny Vampire",
+        "picture": "path/to/image"
     },
     {
         "id": 1,
-        "name": "Mini Witch",
-        "Strength": 4,
-        "Agility": 4,
-        "Dexterity": 4,
-        "extraStr": 1,
-        "extraAgil": 1,
-        "extraDex": 2
+        "name": "Baby Bumblebee",
+        "picture": "path/to/image"
     },
     {
         "id": 2,
-        "name": "Tiny Vampire",
-        "Strength": 3,
-        "Agility": 5,
-        "Dexterity": 4,
-        "extraStr": 1,
-        "extraAgil": 2,
-        "extraDex": 1
+        "name": "Junior Ghostbuster",
+        "picture": "path/to/image"
     },
     {
         "id": 3,
-        "name": "Baby Bumblebee",
-        "Strength": 3,
-        "Agility": 3,
-        "Dexterity": 6,
-        "extraStr": 1,
-        "extraAgil": 1,
-        "extraDex": 2
-    },
-    {
-        "id": 4,
-        "name": "Junior Ghostbuster",
-        "Strength": 4,
-        "Agility": 4,
-        "Dexterity": 4,
-        "extraStr": 1,
-        "extraAgil": 1,
-        "extraDex": 2
-    },
-    {
-        "id": 5,
         "name": "Toddler Mummy",
-        "Strength": 4,
-        "Agility": 3,
-        "Dexterity": 5,
-        "extraStr": 1,
-        "extraAgil": 1,
-        "extraDex": 2
-    },
-    {
-        "id": 6,
-        "name": "Petite Pirate",
-        "Strength": 5,
-        "Agility": 4,
-        "Dexterity": 3,
-        "extraStr": 2,
-        "extraAgil": 1,
-        "extraDex": 1
-    },
-    {
-        "id": 7,
-        "name": "Adorable Alien",
-        "Strength": 3,
-        "Agility": 5,
-        "Dexterity": 4,
-        "extraStr": 1,
-        "extraAgil": 2,
-        "extraDex": 1
-    },
-    {
-        "id": 8,
-        "name": "Sweet Skeleton",
-        "Strength": 4,
-        "Agility": 3,
-        "Dexterity": 5,
-        "extraStr": 1,
-        "extraAgil": 1,
-        "extraDex": 2
-    },
-    {
-        "id": 9,
-        "name": "Baby Bat",
-        "Strength": 3,
-        "Agility": 4,
-        "Dexterity": 5,
-        "extraStr": 1,
-        "extraAgil": 2,
-        "extraDex": 1
-    },
-    {
-        "id": 10,
-        "name": "Mini Monster",
-        "Strength": 5,
-        "Agility": 4,
-        "Dexterity": 3,
-        "extraStr": 2,
-        "extraAgil": 1,
-        "extraDex": 1
-    },
-    {
-        "id": 11,
-        "name": "Lil' Fairy Princess",
-        "Strength": 3,
-        "Agility": 4,
-        "Dexterity": 5,
-        "extraStr": 1,
-        "extraAgil": 2,
-        "extraDex": 1
-    },
-    {
-        "id": 12,
-        "name": "Tiny Superhero",
-        "Strength": 5,
-        "Agility": 4,
-        "Dexterity": 3,
-        "extraStr": 2,
-        "extraAgil": 1,
-        "extraDex": 1
-    },
-    {
-        "id": 13,
-        "name": "Mini Mouse",
-        "Strength": 4,
-        "Agility": 5,
-        "Dexterity": 3,
-        "extraStr": 1,
-        "extraAgil": 2,
-        "extraDex": 1
-    },
-    {
-        "id": 14,
-        "name": "Little Dinosaur",
-        "Strength": 5,
-        "Agility": 3,
-        "Dexterity": 4,
-        "extraStr": 2,
-        "extraAgil": 1,
-        "extraDex": 1
-    },
-    {
-        "id": 15,
-        "name": "Junior Zombie",
-        "Strength": 4,
-        "Agility": 5,
-        "Dexterity": 3,
-        "extraStr": 1,
-        "extraAgil": 2,
-        "extraDex": 1
-    },
-    {
-        "id": 16,
-        "name": "Tiny Astronaut",
-        "Strength": 4,
-        "Agility": 4,
-        "Dexterity": 4,
-        "extraStr": 1,
-        "extraAgil": 1,
-        "extraDex": 2
-    },
-    {
-        "id": 17,
-        "name": "Little Red Riding Hood",
-        "Strength": 4,
-        "Agility": 4,
-        "Dexterity": 4,
-        "extraStr": 1,
-        "extraAgil": 1,
-        "extraDex": 2
-    },
-    {
-        "id": 18,
-        "name": "Little Wolf",
-        "Strength": 5,
-        "Agility": 3,
-        "Dexterity": 4,
-        "extraStr": 2,
-        "extraAgil": 1,
-        "extraDex": 1
-    },
-    {
-        "id": 19,
-        "name": "Baby Ladybug",
-        "Strength": 3,
-        "Agility": 4,
-        "Dexterity": 5,
-        "extraStr": 1,
-        "extraAgil": 2,
-        "extraDex": 1
+        "picture": "path/to/image"
     }
 ]
 
